# src/routes/index.js
@@ -2,6 +2,7 @@ const express = require("express");
 const healthRoutes = require("../modules/health/health.routes");
 const categoryRoutes = require("../modules/categories/category.routes");
 const productRoutes = require("../modules/products/product.routes");
+const cartRoutes = require("../modules/cart/cart.routes");
 const orderRoutes = require("../modules/orders/order.routes");
 const userRoutes = require("../modules/users/user.routes");
 const authRoutes = require("../modules/auth/auth.routes");
@@ -11,6 +12,7 @@ const router = express.Router();
 router.use("/health", healthRoutes);
 router.use("/categories", categoryRoutes);
 router.use("/products", productRoutes);
+router.use("/cart", cartRoutes);
 router.use("/orders", orderRoutes);
 router.use("/users", userRoutes);
 router.use("/auth", authRoutes);
